@startuml

title __FINALWITHDB.APP's Class Diagram__\n

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.BuildConfig {
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.CalendarUtils {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.DailyCalendarActivity {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.Event {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.EventEditActivity {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.EventPage {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.HourAdapter {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.HourEvent {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    namespace Calendar {
      class com.example.finalwithdb.Calendar.WeekViewActivity {
      }
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.ClassList {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.IndividualPage {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.MainActivity {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.PopUpForClasslist {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.PopUpForIndividual {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.PopUpForStudentlist {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.Splashscreen {
    }
  }
  

  namespace com.example.finalwithdb {
    class com.example.finalwithdb.StudentList {
    }
  }
  

  com.example.finalwithdb.Calendar.DailyCalendarActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.Calendar.EventEditActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.Calendar.EventPage -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.Calendar.HourAdapter -up-|> android.widget.ArrayAdapter
  com.example.finalwithdb.Calendar.WeekViewActivity .up.|> com.example.finalwithdb.Calendar.CalendarUtils.CalendarAdapter.OnItemListener
  com.example.finalwithdb.Calendar.WeekViewActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.ClassList -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.IndividualPage -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.MainActivity .up.|> com.example.finalwithdb.Calendar.CalendarUtils.CalendarAdapter.OnItemListener
  com.example.finalwithdb.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.PopUpForClasslist -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.PopUpForIndividual -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.PopUpForStudentlist -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.Splashscreen -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.finalwithdb.StudentList -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
